--- a/VB-ecommerce-backend.csproj
+++ b/VB-ecommerce-backend.csproj
@@ -11,11 +11,13 @@
         <PackageReference Include="CData.MySQL" Version="23.0.8565" />
         <PackageReference Include="Dapper" Version="2.0.151" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
         <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="7.0.0-preview3" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.0.0-preview3" />
         <PackageReference Include="MySql.Data" Version="8.1.0" />
         <PackageReference Include="MySqlConnector" Version="2.3.0-beta.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+        <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0-preview3" />
         <PackageReference Include="WCM.MySql.Data.5.1.7" Version="5.1.7" />
     </ItemGroup>
